add DebugButton Components

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -25,7 +25,7 @@
 	<link rel="stylesheet" type="text/css" href="/stylesheets/<%- entry %>.css"/>
 </head>
 <body>
-<div id="App"></div>
+<div id="App"><%- template -%></div>
 <script type="text/javascript" src="/javascripts/<%- entry %>.js"></script>
 </body>
 </html>
